// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-operator-field Renders \`c-operator-field\` with custom props correctly 1`] = `
<div
  class="v-input v-input--selection-controls v-input--radio-group v-input--radio-group--row v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
      style="height: auto;"
    >
      <div
        class="v-input--radio-group__input"
        role="radiogroup"
      >
        <div
          class="v-radio radio-operator theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              aria-label="And"
              name="customName"
              role="radio"
              type="radio"
              value="$and"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            And
          </label>
        </div>
        <div
          class="v-radio radio-operator theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              aria-label="Or"
              name="customName"
              role="radio"
              type="radio"
              value="$or"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Or
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-operator-field Renders \`c-operator-field\` with default props correctly 1`] = `
<div
  class="v-input v-input--selection-controls v-input--radio-group v-input--radio-group--row v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
      style="height: auto;"
    >
      <div
        class="v-input--radio-group__input"
        role="radiogroup"
      >
        <div
          class="v-radio radio-operator theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              aria-label="And"
              name="operator"
              role="radio"
              type="radio"
              value="$and"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            And
          </label>
        </div>
        <div
          class="v-radio radio-operator theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              aria-label="Or"
              name="operator"
              role="radio"
              type="radio"
              value="$or"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            Or
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
